--- a/index.html
+++ b/index.html
@@ -169,6 +169,14 @@ rel="stylesheet">
             <li><a href="#contact">Contact</a></li>
           </ul>
         </nav>
+        <nav class="footer-nav">
+          <ul>
+            <li><a href=#service>てんこ</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#works">Works</a></li>
+            <li><a href="#contact">Contact</a></li>
+          </ul>
+        </nav>
         
         <div class="footer-top">
           <a class="footer-main" href="#">
