--- a/index.html
+++ b/index.html
@@ -20,7 +20,10 @@ rel="stylesheet">
 <body>
   <div class="container">
     <header id="header">
-      <a href="#"><img class="main-logo" src="images/main-logo.svg" alt="logo"><h1 class="site-title">Let's move on</h1></a>
+      <a  class="header-logo" href="#">
+        <img class="main-logo" src="images/main-logo1.svg" alt="logo">
+        <h1 class="site-title">Let's move on</h1>
+      </a>
       <div class="mobile-nav">
         <span class="material-icons" id="open">menu</span>
       </div>
@@ -57,7 +60,7 @@ rel="stylesheet">
           <h1 class="main-visual-text"><span>Let's</span> move on</h1>
           <div class="outside"></div>
         </div>
-        <img class="main-visual-item" src="images/main_visual.jpg" alt="向日葵畑">
+        <img class="main-visual-item" src="images/main-visual2.png" alt="向日葵畑">
       </hero>
       
       
