--- a/index.html
+++ b/index.html
@@ -69,26 +69,26 @@
         <div class="text">
           <h2 class="content-title">Service</h2>
           <h3>サイトコーディング</h3>
-            <div class="service-wrap">
-              <p>
-                ・製作費<br>
-                ・トップページ<br>
-                ・その他1ページ<br>
-              </p>
-              <p>
-                20,000円〜<br>
-                20,000円  <br>
-                10,000円  <br>
-              </p>
-            </div>
-              <h3>使用言語</h3>
-              <p class="lang">
-                ・HTML&CSS<br>
-                ・JavaScript/jQuery<br>
-              </p>
-              <p class="asterisk">※費用については相談可能です。
-                <br>お気軽にご相談下さい。
-              </p>
+          <div class="service-wrap">
+            <p>
+              ・製作費<br>
+              ・トップページ<br>
+              ・その他1ページ<br>
+            </p>
+            <p>
+              20,000円〜<br>
+              20,000円  <br>
+              10,000円  <br>
+            </p>
+          </div>
+            <h3>使用言語</h3>
+            <p class="lang">
+              ・HTML&CSS<br>
+              ・JavaScript/jQuery<br>
+            </p>
+            <p class="asterisk">※費用については相談可能です。
+              <br>お気軽にご相談下さい。
+            </p>
           </div>
           <img class="desk-work" src="images/deskwork.svg" alt="">
       </section>
@@ -96,8 +96,8 @@
       <section class="wrapper mb" id="about">
         <img class="dance-pic" src="images/dance.svg" alt="">
         <div class="text">
-        <h2 class="content-title">About</h2>
-        <div class="about-bg"></div>
+          <h2 class="content-title">About</h2>
+          <div class="about-bg"></div>
           <h3 class="name">Kouki</h3>
           <p class="profile">
             大手家電企業から介護職へ→30歳でWeb業界へ転身。<br>
@@ -115,13 +115,23 @@
 
         <div class="about-pic">
           <img class="sky-pic" src="images/sky-pic.png" alt="">
-          <!-- <img class="sky-pic" src="images/about_img.jpg" alt=""> -->
         </div>
       </section>
 
       <section class="wrapper mb" id="works">
         <h2 class="content-title">Works</h2>
-        <!-- <img class="works-himawari" src="images/works.svg" alt=""> -->
+
+        <div class="works-wrapper">
+
+          <div class="works-item-wrap">
+            <p class="works-item-title">EC SITE -Fam Fan-</p>
+            <a href="#">
+              <div class="works-item">
+                <img class="works-item-img" src="images/works/fam-fan.png" alt="">
+              </div>
+            </a>
+          </div>
+        </div>
       </section>
 
       <section class="wrapper mb" id="contact">
@@ -198,10 +208,7 @@
       <li><img class="display-item" src="images/top_down5.svg" alt=""></li>
     </ul>
   </div>
-  
-  
-  
-  
+
   <script src="js/main.js"></script>
   <script src="jquery-3.6.0.min.js"></script>
 </body>
