--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@
   <title>Kouki's Portfolio</title>
   <link rel="shortcut icon" href="images/favicon.svg">
   <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
-  <link rel="stylesheet" href="css/mobile.css">
-  <link rel="stylesheet" href="css/style.css">
-  <link rel="stylesheet" href="css/pc.css">
-  <link rel="stylesheet" href="css/desktop.css">
+  <link rel="stylesheet" href="css/mobile/mobile.css">
+  <link rel="stylesheet" href="css/css/style.css">
+  <link rel="stylesheet" href="css/tablet/tablet.css">
+  <link rel="stylesheet" href="css/desktop/desktop.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Kalam&family=Klee+One:wght@600&family=Short+Stack&display=swap" rel="stylesheet">
