--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Kouki's Portfolio</title>
   <link rel="shortcut icon" href="images/favicon.svg">
   <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
-  <link rel="stylesheet" href="css/css/style.css">
+  <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/mobile/mobile.css">
   <link rel="stylesheet" href="css/tablet/tablet.css">
   <link rel="stylesheet" href="css/desktop/desktop.css">
