--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
               ・その他1ページ<br>
             </p>
             <p class="item-text">
-              00,000円〜<br>
-              00,000円  <br>
-              00,000円  <br>
+              20,000円〜<br>
+              20,000円  <br>
+              10,000円  <br>
             </p>
           </div>
             <h3 class="content-item">使用言語</h3>
@@ -115,17 +115,23 @@
 
       <section class="wrapper mb" id="works">
         <h2 class="content-title">Works</h2>
-
         <div class="works-wrapper">
 
           <div class="works-item-wrap">
+            <!-- 画像サイズは1000*814 -->
             <a class="works-item" href="https://cookie729.github.io/ecsite.fam-fan/">
-              <img class="works-item-img" src="images/works/fam-fan.png" alt="">
+              <img class="works-item-img" src="images/works/fam-fan.jpg" alt="">
               EC SITE -Fam Fun-
             </a>
           </div>
 
-        </div>
+          <div class="works-item-wrap">
+            <a class="works-item" href="https://fumika-photo.com">
+              <img class="works-item-img" src="images/works/photographer-fumika.jpg" alt="">
+              Photographer Fumika様
+            </a>
+          </div>
+
       </section>
 
       <section class="wrapper mb" id="contact">
