--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
             <button class="button" type="submit"><i class="fas fa-envelope mail"></i>送信</button>
           </div>
         </form>
-        <img class="form-img" src="images/contact_himawari.png" alt="">
+        <img class="form-img" src="images//contact_himawari.png" alt="">
       </section>
     </main>
     
