--- a/works.html
+++ b/works.html
@@ -32,7 +32,7 @@
         
         <nav class="pc-nav">
           <ul>
-            <li><a class="pc-nav-text" href="index.html">Top</a></li>
+            <li><a class="pc-nav-text" href="index.html">Home</a></li>
             <li><a class="pc-nav-text" href="service.html">Service</a></li>
             <li><a class="pc-nav-text" href="about.html">About</a></li>
             <li><a class="pc-nav-text" href="contact.html">Contact</a></li>
@@ -42,7 +42,7 @@
         <div class="overlay">
           <span class="material-icons" id="close">close</span>
             <ul class="close-nav">
-              <li class="close-text"><a href="index.html">Top</a></li>
+              <li class="close-text"><a href="index.html">Home</a></li>
               <li class="close-text"><a href=service.html>Service</a></li>
               <li class="close-text"><a href="about.html">About</a></li>
               <li class="close-text"><a href="contact.html">Contact</a></li>
