--- a/about.html
+++ b/about.html
@@ -71,11 +71,24 @@
             「前を向ける、前に進める」をモットーに,<br>妥協せず、追求し,より良い「ものづくり」をさせて頂きます。<br>
             お客様の希望を叶えるWeb制作を目指します。
           </p>
+          <div class="profile-flex">
+            <p class="profile profile-mr">
+              強み :<br><br>
+              好きな言葉 :<br>
+              趣味 :<br>
+            </p>
+            <p class="profile">
+              ポジティブ思考で前にすすむ方法を考える。<br>
+              型にとらわれない自由な発想。<br>
+              有言実行。<br>
+              ダンス、筋トレ、映画鑑賞、読書<br>
+            </p>
+          </div>
+        </div>
+        <div class="about-pic">
+          <img class="sky-pic sky-about-pages" src="images/sky-pic.png" alt="">
         </div>
 
-        <div class="about-pic">
-          <img class="sky-pic" src="images/sky-pic.png" alt="">
-        </div>
       </section>
       
     </main>
