--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
   <title>Kouki's Portfolio</title>
   <link rel="shortcut icon" href="images/favicon.svg">
   <link rel="stylesheet" href="https://unpkg.com/ress/dist/ress.min.css">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="css/about.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Kalam&family=Klee+One:wght@600&family=Short+Stack&display=swap" rel="stylesheet">
