fix: 1年後の経歴に更新

--- a/about.html
+++ b/about.html
@@ -60,9 +60,10 @@
           <h3 class="name">Kouki</h3>
           <p class="profile">
             大手家電企業から介護職へ→30歳でWeb業界へ転身。<br>
-            フリーランスでHTML&CSSコーディング、<br>
+            現在自社開発企業にて、<br>
+            Python, Vue, PostgreSQLを使用しアプリ開発を行なっています。<br>
+            HTML&CSSコーディング、<br>
             JavaScriptでWeb制作をしています。
-            現在はPHP学習中です。
           </p>
           <p class="profile">
             15年以上独学でストリートダンスに打ち込み、<br>大会では入賞・優勝・全国大会への出場経験があります。
