--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
               ・その他1ページ<br>
             </p>
             <p class="item-text">
-              20,000円〜<br>
-              20,000円  <br>
-              10,000円  <br>
+              30,000円〜<br>
+              30,000円  <br>
+              10,000円〜 <br>
             </p>
           </div>
           <h3 class="content-item">サービス内容</h3>
@@ -89,12 +89,15 @@
               ・簡易な画像編集<br>
             </p>
 
-          <h3 class="content-item">使用言語/デザインツール
+          <h3 class="content-item">スキル
           </h3>
             <p class="lang item-text">
               ・HTML&CSS<br>
               ・JavaScript/jQuery<br>
+              ・Vue.js <br>
+              ・React, Redux <br>
               ・PHP<br>
+              ・Python <br>
               ・XD<br>
               ・Illustrator<br>
               ・Photoshop<br>
@@ -114,14 +117,18 @@
           <h3 class="name">Kouki</h3>
           <p class="profile">
             大手家電企業から介護職へ→30歳でWeb業界へ転身。<br>
-            フリーランスでHTML&CSSコーディング、<br>
+            現在自社開発企業にて、<br>
+            Python, Vue, PostgreSQLを使用しアプリ開発を行なっています。<br>
+            HTML&CSSコーディング、<br>
             JavaScriptでWeb制作をしています。
           </p>
           <p class="profile">
-            15年以上独学でストリートダンスに打ち込み、<br>大会では入賞・優勝・全国大会への出場経験があります。
+            15年以上独学でストリートダンスに打ち込み、<br>
+            大会では入賞・優勝・全国大会への出場経験があります。
           </p>
           <p class="profile">
-            「前を向ける、前に進める」をモットーに,<br>妥協せず、追求し,より良い「ものづくり」をさせて頂きます。<br>
+            「前を向ける、前に進める」をモットーに,<br>
+            妥協せず、追求し,より良い「ものづくり」をさせて頂きます。<br>
             お客様の希望を叶えるWeb制作を目指します。
           </p>
         </div>
