--- a/service.html
+++ b/service.html
@@ -64,9 +64,9 @@
               ・その他1ページ<br>
             </p>
             <p class="item-text">
+              30,000円〜<br>
+              30,000円  <br>
               20,000円〜<br>
-              20,000円  <br>
-              10,000円  <br>
             </p>
           </div>
 
@@ -81,12 +81,15 @@
               ・簡易な画像編集<br>
             </p>
 
-          <h3 class="content-item">使用言語/デザインツール
+          <h3 class="content-item">スキル
           </h3>
             <p class="lang item-text">
               ・HTML&CSS<br>
               ・JavaScript/jQuery<br>
+              ・Vue.js <br>
+              ・React, Redux <br>
               ・PHP<br>
+              ・Python <br>
               ・XD<br>
               ・Illustrator<br>
               ・Photoshop<br>
